# zs-nac

./: LICENSE  README.md  environment_cpu.yaml  environment_cuda.yaml  pyproject.toml
conda/: build-conda-pkg.gitlab-ci.yaml  meta.yaml
data/: background_mask.npy  noisy_braint2-1654_128x128x14_snr20.npy  ref_braint2-1654_128x128x14.npy
scripts/: main.py  parser_ops.py
src/zs_nac/: denoising_func.py  load_data.py  training.py  unet_model.py  utils.py
test/: test_denoising.py  test_noisy_braint2-1654_128x128x14_snr20_devicecpu_alpha1_nchan1.json  test_noisy_braint2-1654_128x128x14_snr20_devicecpu_alpha1_nchan2.json  test_noisy_braint2-1654_128x128x14_snr20_devicecuda_alpha1_nchan1.json  test_noisy_braint2-1654_128x128x14_snr20_devicecuda_alpha1_nchan2.json
